--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["lucide", "shadcn", "Wakatime"]
+  "cSpell.words": ["Aurore", "Coolvetica", "lucide", "shadcn", "Wakatime"]
 }
