feat: install and setup contentLayer

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-  "cSpell.words": ["Aurore", "Coolvetica", "lucide", "shadcn", "Wakatime"]
+  "cSpell.words": [
+    "Aurore",
+    "Coolvetica",
+    "lucide",
+    "rehype",
+    "shadcn",
+    "Wakatime"
+  ]
 }
