--- a/package.json
+++ b/package.json
@@ -15,13 +15,19 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "contentlayer": "^0.3.4",
     "framer-motion": "^10.16.16",
     "geist": "^1.2.0",
     "lucide-react": "^0.294.0",
     "next": "14.0.4",
+    "next-contentlayer": "^0.3.4",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-pretty-code": "^0.10.2",
+    "rehype-slug": "^6.0.0",
+    "remark-gfm": "^4.0.0",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7"
   },
