fix(icons): using local icon

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,3 @@
 {
-  "cSpell.words": [
-    "Aurore",
-    "Coolvetica",
-    "lucide",
-    "rehype",
-    "shadcn",
-    "Wakatime",
-    "whoamiapi"
-  ]
+  "cSpell.words": ["Aurore", "Coolvetica", "extralight", "lucide", "rehype", "shadcn", "Wakatime", "whoamiapi"]
 }
