feat(project): fetch all project from microcms

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,2 @@
-NEXT_PUBLIC_WHOAMI_URL=http://localhost:4001/api/v1
+MICROCMS_URL=https://lazlanrafar.microcms.io/api/v1
+MICROCMS_API_KEY=WUr5sukSquvzzpjBmGJjIUZuAFH6fxyFQwfL
