--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,13 @@
 {
-  "cSpell.words": ["Aurore", "Coolvetica", "extralight", "lucide", "rehype", "shadcn", "Wakatime", "whoamiapi"]
+  "cSpell.words": [
+    "Aurore",
+    "Coolvetica",
+    "extralight",
+    "lucide",
+    "MICROCMS",
+    "rehype",
+    "shadcn",
+    "Wakatime",
+    "whoamiapi"
+  ]
 }
