--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "framer-motion": "^10.16.16",
     "geist": "^1.2.0",
     "lucide-react": "^0.294.0",
+    "motion": "^12.9.7",
     "next": "14.0.4",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
