--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,18 @@
+# Site Configuration
+NEXT_PUBLIC_SITE_URL=https://lazlanrafar.com
+
+# Analytics
+NEXT_PUBLIC_GA_ID=G-1PMGV3HD5T
+
+# MicroCMS Configuration
 MICROCMS_URL=https://lazlanrafar.microcms.io/api/v1
-MICROCMS_API_KEY=WUr5sukSquvzzpjBmGJjIUZuAFH6fxyFQwfL
+MICROCMS_API_KEY=your-microcms-api-key
+
+# Development
+NODE_ENV=development
+
+# Optional: Google Site Verification
+NEXT_PUBLIC_GOOGLE_SITE_VERIFICATION=your-google-site-verification-code
+
+# Optional: Additional Analytics
+NEXT_PUBLIC_VERCEL_ANALYTICS_ID=your-vercel-analytics-id
