--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "@hookform/resolvers": "^3.10.0",
     "@mdx-js/loader": "^3.0.1",
     "@mdx-js/react": "^3.0.1",
-    "@next/mdx": "^14.2.30",
-    "@next/third-parties": "^14.2.30",
+    "@next/mdx": "^15.0.0",
+    "@next/third-parties": "^15.0.0",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -40,7 +40,7 @@
     "geist": "^1.4.2",
     "lucide-react": "^0.294.0",
     "motion": "^12.9.7",
-    "next": "^14.2.30",
+    "next": "15.3.4",
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.2.1",
     "react": "^18.3.1",
@@ -51,19 +51,21 @@
     "rehype-pretty-code": "^0.10.2",
     "rehype-slug": "^6.0.0",
     "remark-gfm": "^4.0.0",
-    "tailwind-merge": "^2.1.0",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.11",
     "@types/node": "^20.10.4",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.1",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.55.0",
-    "eslint-config-next": "^14.2.30",
+    "eslint-config-next": "^15.0.0",
     "postcss": "^8.4.32",
-    "tailwindcss": "^3.3.6",
+    "tailwindcss": "^4.1.11",
+    "tw-animate-css": "^1.3.5",
     "typescript": "^5.3.3"
   }
 }
