feat(app): fetch from app.lazlanrafar.com

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,13 @@
 # Site Configuration
-NEXT_PUBLIC_SITE_URL=https://lazlanrafar.com
+NEXT_PUBLIC_BASE_URL=https://lazlanrafar.com
+NEXT_PUBLIC_API_URL=https://app.lazlanrafar.com/api
 
 # Analytics
 NEXT_PUBLIC_GA_ID=G-1PMGV3HD5T
 
 # MicroCMS Configuration
 MICROCMS_URL=https://lazlanrafar.microcms.io/api/v1
-MICROCMS_API_KEY=your-microcms-api-key
+MICROCMS_API_KEY=WUr5sukSquvzzpjBmGJjIUZuAFH6fxyFQwfL
 
 # Development
 NODE_ENV=development
